Refactored names, add additional check on signal interruption on epoll_wait

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@ __pycache__
 *.dSYM/
 *.su
 tags
+build
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifest.txt
+tritedb.build
