--- a/conf/tritedb.conf
+++ b/conf/tritedb.conf
@@ -16,3 +16,11 @@ unix_socket /tmp/tritedb.sock
 log_level DEBUG
 
 log_path /tmp/tritedb.log
+
+# Max memory to be used, after which the system starts to reclaim memory by
+# freeing older items stored
+max_memory 2GB
+
+# Time threshold that defines the reclaiming policy after the systems have
+# reached the max_memory limit
+mem_reclaim_time 15m
