Fixed nasty bug in ringbuffer implementation, add bulk size put test and max_request_size configuration

--- a/conf/tritedb.conf
+++ b/conf/tritedb.conf
@@ -24,3 +24,6 @@ max_memory 2GB
 # Time threshold that defines the reclaiming policy after the systems have
 # reached the max_memory limit
 mem_reclaim_time 15m
+
+# Max memory that will be allocated for each request
+max_request_size 5MB
