Add tcp backlog configuration

--- a/conf/tritedb.conf
+++ b/conf/tritedb.conf
@@ -27,3 +27,6 @@ mem_reclaim_time 15m
 
 # Max memory that will be allocated for each request
 max_request_size 5MB
+
+# TCP backlog, size of the complete connection queue
+tcp_backlog 128
